--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "rollup src/index.js --o dist/index.js -f umd",
-    "test": "mocha"
+    "test": "mocha --require babel-register"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/rodson/HTMLParser#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "mocha": "^5.0.3",
     "rollup": "^0.56.5"
   }
